2008-04-22 David Hansen <david.hansen@gmx.net>

	* sb-zeit-de.el (shimbun-zeit-de-x-face-alist): New variable.
        (shimbun-zeit-de-content-end): Follow new page layout.
        (shimbun-get-headers): Remove "from=rss" parameter from the URL.
        (shimbun-clear-contents): Filter more junk.

2008-04-22 David Hansen <david.hansen@gmx.net>
	* sb-the-register.el (shimbun-the-register-x-face-alist): New variable.
        (shimbun-get-headers): Remove URL rewriting.
        (shimbun-make-contents): Remove more ads.

2008-04-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun.el (shimbun-japanese-hankaku-region-1): Fix regexp used to
	find urls that are expressed with wide characters.

2008-04-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-nikkansports.el: Rewrite.

2008-03-29  David Engster  <dengste@eml.cc>

	* sb-slashdot.el (shimbun-slashdot-group-url): New variable.
	(shimbun-slashdot-groups): Default to a list of the groups that
	shimbun-slashdot-group-url defines.
	(shimbun-index-url): Use it.

2008-03-28  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-cnn-jp.el (shimbun-cnn-jp-content-start)
	(shimbun-cnn-jp-content-end): Update.
	(shimbun-cnn-jp-x-face-alist): Shrink image size.

2008-03-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-elips.el: Depend on sb-mailman.el.
	(shimbun-elips-url): Update.

	* sb-mailman.el (shimbun-mailman-header): Work for yearly archives.

2008-03-27  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* sb-impress.el (shimbun-impress-ignored-subject-regexp): New variable.
	(shimbun-headers): Use it.

2008-03-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* sb-mainichi.el (shimbun-get-headers): Remove ads.
	(shimbun-rss-build-message-id): New function that doesn't strip string
	following "?" or "#" in url when calculating its md5.

2008-03-21  David Engster  <dengste@eml.cc>

	* sb-heise.el (shimbun-heise-get-newsticker-headers): Adapt to the new
	URL scheme on http://www.heise.de/newsticker.

2008-02-24  David Hansen  <david.hansen@gmx.net>
