@@ -1,3 +1,8 @@
+2008-05-08  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>
+
+	* sb-impress.el (shimbun-headers): Ignore headers if there's no
+	subject.
+
 2008-04-22 David Hansen <david.hansen@gmx.net>
 
 	* sb-zeit-de.el (shimbun-zeit-de-x-face-alist): New variable.
